tests/errors/nested_continue_value_type_mismatch.dang
# Nested continue expressions in a continue value still target the block invocation
pub result: [String!]! = [1].map { x =>
  continue {
    continue 42
  }
  "ok"
}
